--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!--<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">-->
-    <title>extech 2019</title>
+    <title>ExTech 2019</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
   </head>
   <body>
