--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!--<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">-->
     <title>ExTech 2019</title>
     <link rel="icon" type="image/x-icon" href="static/favicon.ico">
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.11&key=ba5ee3230315b701622968543685ba3a"></script>
+    <script src="https://webapi.amap.com/ui/1.0/main.js"></script>
   </head>
   <body>
     <div id="app"></div>
